# subit-nous

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile.mk  README.md  ROADMAP.md  SUBIT_v3.md  TUTORIAL.md  asset-manifest.json  check_subit.py  content.txt  debug_graph.py  demo_soft.json  diagnose.py  doc.txt  force.txt  index.html  logos.txt  my_clusters.json  pathos.txt  pyproject.toml  requirements.txt  result.txt  soft_output.json  style.txt  test_ollama.py  test_soft.json
.cursor/rules/: subit-nous.mdc
.github/workflows/: publish.yml
demo/: README_demo.md  demo_v5.py  hamlet.txt  meta.txt
demo/code/: factorial.py  fibonacci.js  query.sql
demo/images/: architecture.txt  whiteboard.txt
demo/macro/: culture.md  meeting_notes.txt  team_plan.txt
demo/meso/: journal.txt  poetry.md  reflection.txt
demo/meta/: epic.txt  governance.md  strategy.txt
demo/micro/: code_snippet.py  notes.txt  solution.txt
demo/mixed/: dev_philosophy.txt  seasons.txt  transition.txt
demo/subit-demo/: package-lock.json  package.json
demo/subit-demo/src/: App.css  App.js  subit.js
demo/subit-demo/src/components/: ArchetypeCard.jsx  BinaryDisplay.jsx  LiveSlider.jsx  RadarChart.jsx  TextComparison.jsx
docker/: Dockerfile.dockerfile  docker-compose.yaml
docs/: README.md  REVIEW_v4.1.md  SUBIT_NOUS_v3.md  TEST_STEPS_v3.md  TUTORIAL.md  TUTORIAL_SUBIT_NOUS_UI_v3X.md  WHITEPAPER_v5.md
examples/: basic.py  control_demo.py  core_demo.py
my_wiki/: index.md
my_wiki/communities/: index.md
my_wiki/nodes/: ETHOS_WE_EAST_SPRING.md  LOGOS_ME_SOUTH_SPRING.md  LOGOS_ME_SOUTH_WINTER.md  LOGOS_THEY_EAST_SPRING.md  LOGOS_WE_NORTH_SPRING.md  MACRO mode.md  MESO mode.md  META mode.md  MICRO mode.md  PATHOS_THEY_EAST_WINTER.md  PATHOS_WE_SOUTH_SPRING.md  PATHOS_YOU_EAST_SPRING.md  THYMOS_THEY_NORTH_SPRING.md  index.md
scripts/: generate_classifier_data.py  monitor_training.py  train_classifier.py
src/subit_nous/: __init__.py  agent.py  api.py  classifier.py  cli.py  client.py  control.py  controlled_rewrite.py  core.py  exports.py  graph.py  integrations.py  io.py  llm_control.py  llm_control_ollama.py  query.py  search.py  subit_algebra.py  test_ollama_control.py  ui.py  wiki.py
src/subit_nous/dsl/: __init__.py  ast.py  evaluator.py  parser.py
src/subit_nous/operators/: __init__.py  base.py  evolution.py  mask.py  transfer.py
static/css/: main.1b9bb235.css  main.1b9bb235.css.map
static/js/: 488.f6af8880.chunk.js  488.f6af8880.chunk.js.map  main.312502f5.js  main.312502f5.js.map
test_analyze_out/: report.md
test_cli_folder_out/: report.md
test_demo/: macro.txt  meso.txt  micro.txt
test_out/: report.md
test_raw/: macro.txt  meso.txt  meta.txt  micro.txt
tests/: test_all.py  test_controlled_rewrite.py  test_core.py  test_dsl.py  test_dsl_direct.py  test_integral.py  test_mask.py  test_ollama.py  test_ollama_control.py  test_parse_debug.py  test_rewrite.py  test_sdk.py  test_simple.py  test_temp.txt  test_transfer.py  test_transfer_direct.py  tests_all.md
tests/fixtures/: sample.txt
