[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subit-nous"
version = "2.1.0"
description = "Transform any folder into a knowledge graph using 4 transversal modes (MICRO·MACRO·MESO·META) and 256 archetypes."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SUBIT Ecosystem"}
]
keywords = ["knowledge-graph", "archetypes", "subit", "nous", "cli", "visualization", "4d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "networkx>=3.0",
    "plotly>=5.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
pdf = ["PyPDF2>=3.0.0"]
images = ["Pillow>=10.0.0", "requests>=2.31.0"]
all = ["subit-nous[pdf,images]"]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/subit-ecosystem/subit-nous"
Documentation = "https://github.com/subit-ecosystem/subit-nous#readme"
Repository = "https://github.com/subit-ecosystem/subit-nous"
Issues = "https://github.com/subit-ecosystem/subit-nous/issues"

[project.scripts]
nous = "subit_nous.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["subit_nous*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/subit_nous --cov-report=html --cov-report=term"
asyncio_mode = "auto"