[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subit-nous"
version = "5.0.0"
description = "Formal algebraic coordinate system for meaning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SUBIT Ecosystem", email = "hello@subit.ai"}
]
keywords = ["knowledge-graph", "archetypes", "subit", "nous", "cli", "algebra"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "networkx>=3.0",
    "plotly>=5.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "watchdog>=3.0",
    "pillow>=10.0",
    "pypdf2>=3.0",
    "numpy>=1.24",
    "ollama>=0.1.0",
    "streamlit>=1.28",
    "pandas>=2.0",
    "umap-learn>=0.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
all = ["subit-nous[dev]"]

[project.urls]
Homepage = "https://github.com/sciganec/subit-nous"
Repository = "https://github.com/sciganec/subit-nous"
Issues = "https://github.com/sciganec/subit-nous/issues"

[project.scripts]
nous = "subit_nous.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["subit_nous*"]
